--- a/system_profile/tasks/main.yaml
+++ b/system_profile/tasks/main.yaml
@@ -1,5 +1,5 @@
 - name: Find username
-  command: cat whoami
+  command: whoami
   register: username
 - name: Write at the end of the file
   blockinfile:
