--- a/webserver/tasks/main.yaml
+++ b/webserver/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Install  apache server
   yum:
-    name: apache2
+    name: httpd
     state: latest
   notify: restart_apache_server
 
@@ -22,7 +22,7 @@
 
 - name: Enable apache server
   systemd:
-    name: apache2
+    name: httpd
     enabled: true
 
 
